src/test/valid/extensionTests/forLoops/forMax.wacc
# find the max of two numbers

# Output:
# max value = 17

# Program:

begin
  int x = 10 ;
  int y = 17 ;

  for(int j = 0; (y > 0 || x > 0); j = j + 1) do
    x = x - 1 ;
    y = y - 1
  done ;
  print "max value = ";
  println j
end
