src/test/invalid/semanticErr/extensionTests/forLoops/condNotBool.wacc
begin
  for(int i = 0; i; i = i+1) do
    println i
  done
end
